<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_comment"
    style="@style/loginBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.musicianhub.CommentActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <include
            layout="@layout/comment_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/comment_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_form_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_form_margin"
        android:paddingBottom="70dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/comment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/empty_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_comment_item" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/commentBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:hint="@string/comment_message"></EditText>

        <Button
            android:id="@+id/commentButton"
            style="@style/loginTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_comment"></Button>
    </LinearLayout>
</RelativeLayout>

