<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.musicianhub.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <include
            layout="@layout/edit_profile_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/edit_profile_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_form_margin"
        android:paddingTop="@dimen/activity_form_margin">

        <LinearLayout
            android:id="@+id/edit_profile_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/edit_profile_img_view"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:civ_border_color="#fff"
                app:civ_border_width="2dp" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/edit_profile_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/edit_profile_name"
                    style="@style/loginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_offset"
                    android:layout_marginStart="@dimen/item_offset"
                    android:hint="@string/prompt_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit_profile_username"
                    style="@style/loginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_profile_name"
                    android:layout_marginEnd="@dimen/item_offset"
                    android:layout_marginStart="@dimen/item_offset"
                    android:hint="@string/prompt_user_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <EditText
                    android:id="@+id/edit_profile_email"
                    style="@style/loginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_profile_username"
                    android:layout_marginEnd="@dimen/item_offset"
                    android:layout_marginStart="@dimen/item_offset"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <Spinner
                    android:id="@+id/edit_profile_gender"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_profile_username"
                    android:layout_marginEnd="@dimen/item_offset"
                    android:layout_marginStart="@dimen/item_offset"
                    android:hint="@string/prompt_gender"
                    android:theme="@style/ThemeSpinner" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <EditText
                    android:id="@+id/edit_profile_phoneno"
                    style="@style/loginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_profile_username"
                    android:layout_marginEnd="@dimen/item_offset"
                    android:layout_marginStart="@dimen/item_offset"
                    android:hint="@string/prompt_phoneno"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/logout_button"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_profile_phoneno"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_style"
                android:text="@string/logout_button" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
