<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/loginBackgroundStyle"
    tools:context="com.project.musicianhub.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <include
            layout="@layout/profile_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeUserProfileRefreshLayout"
        android:layout_marginTop="@dimen/activity_form_margin"
        android:paddingTop="@dimen/activity_form_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/user_profile_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">


                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_profile_user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="7dp"
                    app:civ_border_color="#fff"
                    app:civ_border_width="3dp" />

                <TextView
                    android:id="@+id/user_profile_edit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_profile_user_image"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="@dimen/edit_profile_padding"
                    android:text="@string/title_activity_edit_profile" />

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_edit_text_view"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="@dimen/edit_profile_padding"
                    android:text="Profile"/>

                <Button
                    android:id="@+id/user_follow_user_button"
                    style="@style/button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_marginBottom="@dimen/edit_profile_padding"
                    android:background="@drawable/button_style"
                    android:text="@string/follow_user"
                    tools:ignore="RtlHardcoded" />


                <LinearLayout
                    android:id="@+id/user_post_number_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="@dimen/user_info_padding"
                    android:layout_marginStart="@dimen/edit_profile_padding"
                    android:layout_marginTop="@dimen/user_info_padding"
                    android:layout_toEndOf="@+id/user_profile_user_image"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_post_number"
                        style="@style/loginTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="1" />

                    <TextView
                        android:id="@+id/user_post_number_title"
                        style="@style/loginTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_followers_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/user_info_padding"
                    android:layout_marginTop="@dimen/user_info_padding"
                    android:layout_toEndOf="@+id/user_post_number_linear_layout"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_followers_number"
                        style="@style/loginTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="12" />

                    <TextView
                        android:id="@+id/user_followers_number_title"
                        style="@style/loginTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers_number_title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_following_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/user_info_padding"
                    android:layout_toEndOf="@+id/user_followers_linear_layout"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_following_number"
                        style="@style/loginTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="23" />

                    <TextView
                        android:id="@+id/user_following_number_title"
                        style="@style/loginTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following_number_title" />
                </LinearLayout>


            </RelativeLayout>



            <android.support.v7.widget.RecyclerView
                android:id="@+id/user_profile_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/empty_profile_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_music_added" />


        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>